# startweek

./: .gitignore  README.md  main.cpp  mainwindow.cpp  openocd.patch  routegenerator.h
Project/: CMakeLists.txt  Kconfig  app.overlay  h7ConfigScriptOzone.jdebug  prj.conf  sample.yaml
Project/boards/: native_sim.conf  native_sim.overlay  nucleo_h743zi.conf  nucleo_h743zi.overlay
Project/diagrams/: catchThePokemon.puml  genGame.puml  pokemonOverview.puml
Project/hardware/inc/: buttonMatrix.h  buzzers.h  circleMatrix.h  genericGpio.h  gps.h  gyroCompass.h  lcd.h  ledMatrix.h  lvgl_ui.h  potmeter.h  sdCard.h  sevenSegment.h
Project/hardware/src/: buttonMatrix.c  buzzers.c  circleMatrix.c  genericGpio.c  gps.c  gyroCompass.c  lcd.c  ledMatrix.c  lvgl_ui.c  potmeter.c  sdCard.c  sevenSegment.c
Project/hardwareControl/inc/: configure.h  initialize.h
Project/hardwareControl/src/: configure.c  initialize.c
Project/main/inc/: helperFunctions.h  locations.h  shellFunctions.h  statemachine.h  threads.h
Project/main/src/: helperFunctions.c  locations.c  main.c  shellFunctions.c  statemachine.c  threads.c
Project/states/inc/: catchThePokemon.h  devMode.h  endGame.h  idle.h  minigame1.h  minigame10.h  minigame11.h  minigame12.h  minigame13.h  minigame14.h  minigame15.h  minigame2.h  minigame3.h  minigame4.h  minigame5.h  minigame6.h  minigame7.h  minigame8.h  minigame9.h  trivia.h
Project/states/src/: catchThePokemon.c  devMode.c  endGame.c  idle.c  minigame1.c  minigame10.c  minigame11.c  minigame12.c  minigame13.c  minigame14.c  minigame15.c  minigame2.c  minigame3.c  minigame4.c  minigame5.c  minigame6.c  minigame7.c  minigame8.c  minigame9.c  trivia.c
Project/tests/: CMakeLists.txt  Kconfig  app.overlay  prj.conf  testcase.yaml
Project/tests/boards/: native_sim.conf  nucleo_h743zi.conf  nucleo_h743zi.overlay
Project/tests/inc/: config.h  testButtonMatrix.h  testCircleMatrix.h  testGenericGpio.h  testGyroCompass.h  testIntegration.h  testLcd.h  testLedMatrix.h  testSevenSegment.h
Project/tests/src/: main.c  testAccelerometer.c  testButtonMatrix.c  testCircleMatrix.c  testGenericGpio.c  testHelperFunctions.c  testIntegration.c  testLcd.c  testLedMatrix.c  testMgFunctions.c  testSevenSegment.c
RoutesGenereren/: CMakeLists.txt  RoutesGenereren.pro  RoutesGenereren.pro.user.2de608a  RoutesGenereren.pro.user.6737c63  database.cpp  database.h  locations.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  routegenerator.cpp  routegenerator.h  settingsdialog.cpp  settingsdialog.ui
SD/: poko.txt  trivia.txt
Scripts/: arduinoParser.py  frameToData.py  imageToWalls.py
native_sim/: CMakeLists.txt  README.rst  prj.conf  troubleshooting.md
native_sim/boards/: native_posix.overlay  native_sim.overlay
native_sim/inc/: hardware.h  helperFunctions.h  locations.h  lvgl_ui.h  minigame1.h  minigame2.h  statemachine.h  threads.h
native_sim/src/: hardware.c  helperFunctions.c  idle.c  lvgl_ui.c  main.c  minigame1.c  minigame2.c  statemachine.c  threads.c
